[package]
name = "arse"
version = "0.14.0"
authors = ["Anthony Martinez"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://git.staart.one/ajmartinez/arse"
repository = "https://git.staart.one/ajmartinez/arse.git"
description = "A Rust Site Engine"
keywords = ["blog", "CLI", "website-engine"]
categories = ["command-line-utilities", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "2"
glob = "0.3.0"
hyper = "0.14"
log = "0.4"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
rand = "0.8"
routerify = "2"
rss = "1"
serde = { version = "1", features = ["derive"] }
simplelog = "0.11"
tera = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
