[package]
name = "arse"
version = "0.17.0"
authors = ["Anthony Martinez"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/anthonyjmartinez/arse"
repository = "https://github.com/anthonyjmartinez/arse.git"
description = "A Rust Site Engine"
keywords = ["blog", "CLI", "website-engine"]
categories = ["command-line-utilities", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3", features = ["cargo"] }
glob = "0.3.0"
hyper = { version = "0.14", features = ["client", "http1", "server"] }
log = "0.4"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
rand = "0.8"
routerify = "3"
rss = "2"
serde = { version = "1", features = ["derive"] }
simplelog = "0.12"
tera = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
strip = true
