[package]
name = "arse"
version = "0.18.0"
authors = ["Anthony Martinez"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/anthonyjmartinez/arse"
repository = "https://github.com/anthonyjmartinez/arse.git"
description = "A Rust Site Engine"
keywords = ["blog", "CLI", "website-engine"]
categories = ["command-line-utilities", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["http2"] }
chrono = "0.4"
clap = { version = "4", features = ["cargo"] }
glob = "0.3.0"
log = "0.4"
pulldown-cmark = { version = "0.11", default-features = false, features = ["simd", "html"] }
rand = "0.8"
rss = "2"
serde = { version = "1", features = ["derive"] }
simplelog = "0.12"
tera = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[dev-dependencies]
# May need to have a dev dependency directly on hyper for the use of the client class for testing.
tempfile = "3"
hyper = { version = "1", features = ["full"]}
reqwest = "0.12"

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
strip = true
